# Feographia

./: .appveyor-disabled.yml  .appveyor.yml  .clang-format  .gitignore  .gitmodules  .prj_options-sample.cmake  .travis.yml  CMakeLists.txt  README.md  build.gradle  build_Windows_MSVC_Debug.cmd  build_Windows_MSVC_Release.cmd  build_Windows_MSVC_with_config.cmd  build_Windows_MinGW_with_config.cmd  build_Windows_MinGW_with_config.sh  gradle.properties  settings.gradle
ci/: TravisCiKey.enc
ci/scripts/: before_install.sh  build_host_tools.sh  build_project.sh  test_project.sh
cmake/: compile_flags.cmake  find_libraries.cmake  target_settings.cmake
cmake/libcmaker/: build_icu.cmake  build_icu_host_tools.cmake  build_sqlitemoderncpp.cmake
gradle/wrapper/: gradle-wrapper.properties
host_tools/: CMakeLists.txt
platform/android/FeographiaApp/: build.gradle
platform/android/FeographiaApp/src/androidTest/java/ru/feographia/feographiaapp/: ExampleInstrumentedTest.java
platform/android/FeographiaApp/src/main/: AndroidManifest.xml
platform/android/FeographiaApp/src/main/java/ru/feographia/feographiaapp/: MainActivity.java
platform/android/FeographiaApp/src/main/res/layout/: activity_main.xml
platform/android/FeographiaApp/src/main/res/values/: strings.xml
platform/android/FeographiaApp/src/test/java/ru/feographia/feographiaapp/: ExampleUnitTest.java
platform/wxwidgets/: CMakeLists.txt
platform/wxwidgets/src/fgapp/: main.cpp
src/: CMakeLists.txt
src/Fg/Module/Bible/Base/: View.cpp  View.h
src/Fg/Module/Bible/Block/Word/: Item.cpp  Item.h  ItemView.cpp  ItemView.h  WordPartView.cpp  WordPartView.h
src/Fg/Module/Bible/Text/: Text.cpp  Text.h  TextCreateTable.sql  TextInsertWords.sql  TextSelectWords.sql  Text_test.cpp
src/Fg/Platform/Android/FeographiaApp/: build.gradle  proguard-rules.pro
src/Fg/Platform/Android/FeographiaApp/src/androidTest/java/ru/feographia/feographiaapp/: ExampleInstrumentedTest.java
src/Fg/Platform/Android/FeographiaApp/src/main/: AndroidManifest.xml
src/Fg/Platform/Android/FeographiaApp/src/main/java/ru/feographia/feographiaapp/: MainActivity.java
src/Fg/Platform/Android/FeographiaApp/src/main/res/drawable/: ic_launcher_background.xml
src/Fg/Platform/Android/FeographiaApp/src/main/res/drawable-v24/: ic_launcher_foreground.xml
src/Fg/Platform/Android/FeographiaApp/src/main/res/layout/: activity_main.xml
src/Fg/Platform/Android/FeographiaApp/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
src/Fg/Platform/Android/FeographiaApp/src/main/res/values/: colors.xml  strings.xml  styles.xml
src/Fg/Platform/Android/FeographiaApp/src/test/java/ru/feographia/feographiaapp/: ExampleUnitTest.java
src/Fg/Platform/wxWidgets/: CMakeLists.txt
src/Fg/Platform/wxWidgets/FeographiaApp/: main.cpp
src/Fg/Renderer/: Cairo.cpp  Cairo.h  Cairo_test.cpp
src/Fg/Renderer/Font/: Case.cpp  Case.h  Case_test.cpp  Font.cpp  Font.h  Font_test.cpp  Types.h
src/Fg/Renderer/FontLibrary/: Font.cpp  Font.h  FontLibrary.cpp  FontLibrary.h  FontLibrary_test.cpp  Font_test.cpp
src/Fg/Renderer/litehtml/: LiteHtmlContainer.cpp  LiteHtmlContainer.h  LiteHtmlContainer_test.cpp  LiteHtmlRenderer.cpp  LiteHtmlRenderer.h  LiteHtmlRenderer_test.cpp
src/Fg/Shared/: Types.h
src/Fg/UnitTests/: main.cpp
src/Fg/Util/: FileUtil.cpp  FileUtil.h  Filesystem.h  StringUtil.h  StringUtil_test.cpp
src/fg/platform/android/FeographiaApp/src/main/java/ru/feographia/feographiaapp/: MainActivity.java
src/fg/platform/android/FeographiaApp/src/main/res/layout/: activity_main.xml
src/fg/platform/wxwidgets/: CMakeLists.txt
test/: CMakeLists.txt
test/data/: LiteHtmlContainer_1.ppm  LiteHtmlContainer_2.ppm
test/data/Android/: FontTest_1.ppm  LiteHtmlContainer_1.ppm  LiteHtmlContainer_2.ppm
test/data/graphics/: CairoTest_1.ppm
test/data/graphics_2/: FontTest_2.ppm  LiteHtmlContainer_1.ppm  LiteHtmlContainer_2.ppm  LiteHtmlDocument_1.ppm
